--- a/source/css/components/global.css
+++ b/source/css/components/global.css
@@ -4,8 +4,20 @@ body {
   background-color: var(--light-shade);
   border-top: 4px solid var(--brand-color);
   color: var(--dark-shade);
-  padding: calc(var(--main-font-gap) * 2);
+  padding: calc(var(--main-font-gap) / 2);
   scroll-behavior: smooth;
+}
+
+@media screen and (width >= 768px) {
+  body {
+    padding: var(--main-font-gap);
+  }
+}
+
+@media screen and (width > 1024px) {
+  body {
+    padding: calc(var(--main-font-gap) * 2);
+  }
 }
 
 body > *:first-child {
